# Ekstrak-PDF

./: Dockerfile  LICENSE  README.md  config.ini  main.py  prompts.yaml  pyproject.toml
.github/workflows/: ci-cd.yaml
src/components/: extractPdfDetails.py  summaryEngine.py
src/pipelines/: pipeline.py
src/utils/: functions.py  logger.py
